--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: ${{ github.event_name != 'pull_request' }}
-          tags: yapiert/ion-organizer:v1
+          tags: yapiert/ion-organizer-ui:v1
           cache-from: type=gha
           cache-to: type=gha,mode=max
